--- a/package.json
+++ b/package.json
@@ -20,21 +20,18 @@
     "agentkeepalive": "^2.1.1",
     "always-tail": "^0.2.0",
     "async": "^1.5.2",
-    "bluebird": "^3.3.3",
-    "bufferutil": "^1.2.1",
+    "bluebird": "3.1.1",
     "commander": "^2.8.1",
     "debug": "^2.2.0",
     "getos": "^2.4.0",
     "glob": "^7.0.3",
-    "https-proxy-agent": "^2.1.0",
+    "https-proxy-agent": "1.0.0",
     "is-administrator": "^1.0.1",
-    "lodash": "^3.10.1",
+    "lodash": "^4.17.4",
     "macaddress": "^0.2.8",
     "properties": "^1.2.1",
-    "request": "^2.71.0",
-    "utf-8-validate": "^1.2.1",
-    "windows-event-reader": "^1.0.1",
-    "ws": "^1.0.1"
+    "request": "2.81.0",
+    "ws": "0.6.4"
   },
   "optionalDependencies": {
     "node-windows": "^0.1.11"
